[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "QtMDi"
version = '1.1.24'
readme = 'README.md'
authors = [
    { name="o-murphy", email="thehelixpg@gmail.com" },
]
description = "QtMDI (Qt Material Design Icons)"
requires-python = ">=3.8"
keywords = ["pyqt", "pyside", "material-icons", "material-symbols"]
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ['qtawesome', 'qtpy']
# dynamic = ["version", "readme"]

[project.urls]
"Homepage" = "https://github.com/o-murphy/QtMDi"
"Bug Reports" = "https://github.com/o-murphy/QtMDi/issues"
"Source" = "https://github.com/o-murphy/QtMDi"


[tool.setuptools]
py-modules = ["QtMDi"]

[tool.setuptools.packages.find]
where = ["src"]

# [tool.setuptools.dynamic]
# version = {attr = "qtmdi.__version__"}
# readme = {file = ["README.md"]}

[project.scripts]
qtmdi-browser = "qtmdi:run"

[project.entry-points.pyinstaller40]
hook-dirs = "qtmdi.__pyinstaller:get_hook_dirs"

[project.optional-dependencies]
dev = ['pylint', 'flake8', 'pytest', 'bump2version']
