[build-system]
requires = ["uv_build>=0.11.28,<0.12"]
build-backend = "uv_build"


[project]
name = "QtMDi"
version = '2.0.5'
readme = 'README.md'
authors = [{ name = "o-murphy", email = "thehelixpg@gmail.com" }]
description = "QtMDI (Qt Material Design Icons)"
requires-python = ">=3.11"
keywords = ["pyqt", "pyside", "material-icons", "material-symbols"]
license = { file = "LICENSE" }
classifiers = [
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = ["qtawesome>=1.4.2", "qtpy>=2.4.3"]

[project.urls]
"Homepage" = "https://github.com/o-murphy/QtMDi"
"Bug Reports" = "https://github.com/o-murphy/QtMDi/issues"
"Source" = "https://github.com/o-murphy/QtMDi"


[dependency-groups]
dev = [
    "bump2version>=1.0.1",
    "flake8>=7.3.0",
    "fonttools>=4.61.1",
    "pytest>=9.1.1",
    "ruff>=0.15.21",
    "pyqt6>=6.7.1",
]

[project.scripts]
qtmdi-browser = "qtmdi.__main__:run"

[project.entry-points.pyinstaller40]
hook-dirs = "qtmdi.__pyinstaller:get_hook_dirs"

[tool.pytest]
testpaths = ["tests"]
